experiments_log/multiseed/vrp_seed3.log
  File "/home/erzhu419/mine_code/BAPR-HRO/VRP/experiments/run_vrp_comparison.py", line 120
    inst_seed = seed_offset * 1000 + _inst_idx
    ^
IndentationError: expected an indented block after 'for' statement on line 119
